[package]
name = "cacao_playground"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cacao = { git = "https://github.com/24seconds/cacao", branch = "fix_error_in_user_notifications", features = ["user-notifications"] }
